--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,7 @@ cython_debug/
 
 uploads/
 node_modules/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
